tmux.conf: play nice with vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,7 @@ set -s escape-time 0
 
 # Report that we can handle 256 colors
 set -g default-terminal "screen-256color"
+setw -g xterm-keys on
 
 # Use zsh
 set -g default-command /bin/zsh
