tmux.cof: pick up $SSH_AUTH_SOCK from file

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,3 +71,5 @@ set -g update-environment -r
 # Set bg color for current pane.
 set-window-option -g window-status-current-bg white
 
+# pick up $SSH_AUTH_SOCK from file
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
