--- a/tmux.conf
+++ b/tmux.conf
@@ -73,3 +73,13 @@ set-window-option -g window-status-current-bg white
 
 # pick up $SSH_AUTH_SOCK from file
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
+# show battery info
+set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
