forward ssh agent to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,14 +65,12 @@ set-window-option -g automatic-rename off
 # Toggle sending keystrokes to all panes in a window
 bind-key a set-window-option synchronize-panes
 
-# Don't lose track of SSH_AGENT etc. from parent environment.
-set -g update-environment -r
-
 # Set bg color for current pane.
 set-window-option -g window-status-current-bg white
 
-# pick up $SSH_AUTH_SOCK from file
-setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+# forward ssh agent to tmux session
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 
 # show battery info
 set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
