tmux: for some reason ssh/tmux play well together if I don't set anything
Works On My Computer™

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,15 +69,15 @@ bind-key a set-window-option synchronize-panes
 set-window-option -g window-status-current-bg white
 
 # forward ssh agent to tmux session
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
-set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
-
-# show battery info
-set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+# set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
+# set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
+
+# show battery info
+set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
