tmux: fix mouse mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,18 +45,12 @@ set -g pane-base-index 1
 # Toggle mouse mode on and off.
 # With mouse mode on, you can do copies within the tmux buffer.
 bind m \
-  setw -g mode-mouse on \;\
-  set-option -g mouse-resize-pane on \;\
-  set-option -g mouse-select-pane on \;\
-  set-option -g mouse-select-window on \;\
+  setw -g mouse on \;\
   display 'Mouse: ON'
 
 # With mouse mode OFF, you can do copies with in the OS buffer.
 bind M \
-  setw -g mode-mouse off \;\
-  set-option -g mouse-resize-pane off \;\
-  set-option -g mouse-select-pane off \;\
-  set-option -g mouse-select-window off \;\
+  setw -g mouse off \;\
   display 'Mouse: OFF'
 
 # I like to give my windows descriptive names
