tmux: swap `C-a m` from mouse mode to marking the current pane
This also adds `C-a 0` which jumps to the marked pane. Similar
to xmonad's "master pane"

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,16 +42,19 @@ set -g base-index 1
 set -g pane-base-index 1
 
 
-# Toggle mouse mode on and off.
-# With mouse mode on, you can do copies within the tmux buffer.
-bind m \
-  setw -g mouse on \;\
-  display 'Mouse: ON'
+# # Toggle mouse mode on and off.
+# # With mouse mode on, you can do copies within the tmux buffer.
+# bind m \
+#   setw -g mouse on \;\
+#   display 'Mouse: ON'
 
-# With mouse mode OFF, you can do copies with in the OS buffer.
-bind M \
-  setw -g mouse off \;\
-  display 'Mouse: OFF'
+# # With mouse mode OFF, you can do copies with in the OS buffer.
+# bind M \
+#   setw -g mouse off \;\
+#   display 'Mouse: OFF'
+
+# Go to marked pane
+bind 0 select-pane -t {marked}
 
 # I like to give my windows descriptive names
 set-window-option -g automatic-rename off
