tmux: use tmux-resurrect plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,6 +72,7 @@ set-window-option -g window-status-current-bg white
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # show battery info
 set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
