tmux: streamline status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,7 +75,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # show battery info
-set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %h %d (%a) | %H:%M '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
