tmux: notes on how to install tpm plugins on a fresh machine

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,4 +73,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %h %d (%a) | %H:%M '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# You'll need to have a local fork of tpm in your machine...
+#
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#
+# Then once tmux is up, enter `C-a I` to install the tmux plugins:
 run '~/.tmux/plugins/tpm/tpm'
