tmux: various style changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ set -s escape-time 0
 set -g default-terminal "screen-256color"
 setw -g xterm-keys on
 
+# Allow history scrollback up to 5000 lines
+set -g history-limit 5000
+
 # Use zsh
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
@@ -58,7 +61,7 @@ set-window-option -g automatic-rename off
 bind-key a set-window-option synchronize-panes
 
 # Set bg color for current pane.
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-style bg=white
 
 # forward ssh agent to tmux session
 # set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
@@ -70,7 +73,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # show battery info
-set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %h %d (%a) | %H:%M '
+set -g status-right '#{battery_icon} #{battery_percentage} #{battery_remain} | %H:%M '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # You'll need to have a local fork of tpm in your machine...
