tmux: allow longer session names

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,6 +57,9 @@ bind 0 select-pane -t {marked}
 # I like to give my windows descriptive names
 set-window-option -g automatic-rename off
 
+# Allow longer tmux session names
+set -g status-left-length 100
+
 # Toggle sending keystrokes to all panes in a window
 bind-key a set-window-option synchronize-panes
 
