tmux: set prefix using new tmux syntax

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Use C-a instead of C-b, because
 # of muscle memory from GNU screen.
-set-option -g prefix C-a
+set -g prefix C-a
 bind-key C-a last-window
 
 # Cycle through panes
