tmux: comment out config for pane tagging

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,8 @@ set -g pane-base-index 1
 #   display 'Mouse: OFF'
 
 # Go to marked pane
-bind 0 select-pane -t {marked}
+# Commenting out for now. Stopped working in tmux 3.3a
+# bind 1 select-pane -t {marked}
 
 # I like to give my windows descriptive names
 set-window-option -g automatic-rename off
