i3status: simplify for clarity

--- a/i3status.conf
+++ b/i3status.conf
@@ -5,49 +5,41 @@
 # The following line should contain a sharp s:
 # ß
 # If the above line is not correctly displayed, fix your editor first!
+#
+# https://i3wm.org/docs/i3status.html
+# Spaces at the start and end are intentional. The separator isn't very clear.
 
 general {
-        colors = true
+        colors = false
         interval = 5
 }
 
-order += "ipv6"
 order += "wireless _first_"
-order += "ethernet _first_"
 order += "battery all"
-order += "disk /"
-order += "load"
 order += "memory"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
-
-ethernet _first_ {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = " WiFi: %ip at %essid "
+        format_down = " WiFi: down "
 }
 
 battery all {
-        format = "%status %percentage %remaining"
-}
-
-disk "/" {
-        format = "%avail"
-}
-
-load {
-        format = "%1min"
+        format = " %status %percentage - %remaining remaining "
+        status_chr = "⚡ CHARGING"
+        status_bat = "BATT:"
+        status_unk = "? UNK"
+        low_threshold = 10
+        last_full_capacity = true
+        format_percentage = "%.00f%s"
 }
 
 memory {
-        format = "%used | %available"
+        format = " RAM: %available of %total "
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d  %H:%M"
 }
