i3status: remove everything except time and notification icons

--- a/i3status.conf
+++ b/i3status.conf
@@ -14,9 +14,9 @@ general {
         interval = 5
 }
 
-order += "wireless _first_"
-order += "battery all"
-order += "memory"
+# order += "wireless _first_"
+# order += "battery all"
+# order += "memory"
 order += "tztime local"
 
 wireless _first_ {
